test/Fail/Erased-data-1.agda
{-# OPTIONS --erasure #-}

data @0 D : Set where
  c : D

_ : D
_ = c
